Cleaned up some code, added player bounds and sliding movement. Level generator is still WIP.

--- a/Jet-Racer/CSS/game.css
+++ b/Jet-Racer/CSS/game.css
@@ -32,10 +32,12 @@ canvas{
     z-index: -1;
     width: 3600px;
     height: 100%;
+    margin-top: 52px;
+    padding: 0px; 
     top: 0;
     left: 0;
     position: absolute;
-    background: url("../IMGS/cloud.jpg");
+    background: url("../IMGS/Backgrounds/cloud.jpg");
     background-repeat: repeat;
     background-position: 0 0;
     animation: animatedBackground var(--background-speed, 20s) linear infinite;
