--- a/Jet-Racer/CSS/ship_select.css
+++ b/Jet-Racer/CSS/ship_select.css
@@ -52,10 +52,17 @@ nav a{
 	font-size: 40px;
     background-color: blueviolet;
     padding: 0 20px;
+    cursor: pointer;
+    border-radius: 5px;
 }
 
 nav a #prev{
 	margin-left: auto;
+}
+
+#prev:hover,
+#next:hover{
+    background-color: rgb(102, 32, 168);
 }
 
 body > .menu-items > a{
