Added level based map generator. Added WIP implementation of missile class, changed components to objects.

--- a/Jet-Racer/CSS/index.css
+++ b/Jet-Racer/CSS/index.css
@@ -21,17 +21,16 @@ body > .menu-items{
     flex-direction: column;
 }
 
-img,
+#playerAvatar,
 h1,
 a{
     margin: auto auto;
 }
 
-body > .menu-items > img{
-    /*border: 1px solid black;*/
+body > .menu-items > #playerAvatar{
     width: 100%;
     height: 250px;
-
+    
     animation-name: JetLogoAnimation;
     animation-duration: 2s;
 }
@@ -61,6 +60,18 @@ body > .menu-items > a:hover{
     background-color: blueviolet;
 }
 
+.settings-icon{
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    margin-left: 5px;
+}
+
+.settings-icon:hover{
+    animation-name: settingsAnimation;
+    animation-duration: 1s;
+}
+
 @keyframes JetLogoAnimation{
     0%{
         transform: translate(-1000%);
@@ -74,4 +85,84 @@ body > .menu-items > a:hover{
     100%{
         transform: translate(900%, 0%);
     }
+}
+
+@keyframes settingsAnimation{
+    0%{
+        
+    }
+    100%{
+        transform: rotate(75deg);
+    }
+}
+
+.modal{
+    display: none;
+    position: fixed;
+    z-index: 100;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content{
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%;
+    height: 75%;
+    border-radius: 1rem;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.modal-btn{
+    color: #aaa;
+    font-size: 28px;
+    font-weight: bold;
+    width: 25%;
+    margin: 10px auto;
+    border-radius: 5px;
+    letter-spacing: 3px;
+}
+
+.modal-btn:hover,
+.modal-btn:focus{
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.volume-container{
+    margin: 25px auto;
+    padding-left: 50px;
+    padding-right: 50px;
+
+    width: 100%;
+    height: 25px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.volume-slider{
+    width: 35%;
+    height: 25px;
+    background: red;
+}
+
+.volume-icon{
+    width: 25px;
+    height: 25px;
+}
+
+.volume-amount{
+    width: 25px;
 }
