--- a/Jet-Racer/CSS/pauseMenu.css
+++ b/Jet-Racer/CSS/pauseMenu.css
@@ -17,25 +17,32 @@
     margin: auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 80%;
+    width: 65%;
+    height: 65%;
 
     display: flex;
     flex-direction: column;
+    border-radius: 1rem;
 }
 
 .modal-btn{
-    color: #aaa;
-    font-size: 28px;
-    font-weight: bold;
-    width: 25%;
     margin: 10px auto;
-    border-radius: 5px;
-    letter-spacing: 3px;
+    text-decoration: none;
+    padding: 15px;
+    border: 2px solid black;
+    border-radius: 1rem;
+    width: 25%;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    color: black;
+    cursor: pointer;
+    box-shadow: 8px 8px 2px 1px rgba(0, 0, 255, 0.2);
 }
 
 .modal-btn:hover,
 .modal-btn:focus{
-    color: #000;
+    background-color: blueviolet;
     text-decoration: none;
     cursor: pointer;
 }
