--- a/Jet-Racer/CSS/game.css
+++ b/Jet-Racer/CSS/game.css
@@ -37,7 +37,7 @@ canvas{
     top: 0;
     left: 0;
     position: absolute;
-    background: url("../IMGS/Backgrounds/cloud.jpg");
+    background: url("../IMGS/Backgrounds/Zone 3/cloud.jpg");
     background-repeat: repeat;
     background-position: 0 0;
     animation: animatedBackground var(--background-speed, 20s) linear infinite;
