--- a/Jet-Racer/CSS/game.css
+++ b/Jet-Racer/CSS/game.css
@@ -31,15 +31,15 @@ canvas{
 #background {
     z-index: -1;
     width: 3600px;
-    height: 100%;
+    height: 100vh;
     margin-top: 52px;
     padding: 0px; 
     top: 0;
     left: 0;
     position: absolute;
     background: url("../IMGS/Backgrounds/Zone_1/airport.PNG");
-    background-size: cover;
-    background-repeat: repeat;
+    background-size:contain;
+    background-repeat: repeat-x;
     background-position: 0 0;
     animation: animatedBackground var(--background-speed, 20s) linear infinite;
 }
