--- a/Jet-Racer/CSS/game.css
+++ b/Jet-Racer/CSS/game.css
@@ -28,20 +28,50 @@ canvas{
     left:0;
 }
 
+#container{
+    /* position: relative; */
+    padding: 0px 52px 0px 0px;
+    width: 200%;
+    height: 100vh;
+}
+
 #background {
     z-index: -1;
-    width: 3600px;
-    height: 100vh;
+    width: 100%; 
+    height: 100%; 
     margin-top: 52px;
     padding: 0px; 
     top: 0;
     left: 0;
     position: absolute;
     background: url("../IMGS/Backgrounds/Zone_1/airport.PNG");
-    background-size:contain;
-    background-repeat: repeat-x;
-    background-position: 0 0;
+    background-repeat: repeat-x; 
+    background-size: cover; 
+    /* background-size: contain;  */
+    background-position: center, center;
     animation: animatedBackground var(--background-speed, 20s) linear infinite;
+}
+
+#background::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: -100%; /* This will place the copy of the background image on the right side */
+    width: 100%;
+    height: 100%;
+    background-image: url("../IMGS/Backgrounds/Zone_1/airport.PNG");
+    background-repeat: repeat-x; 
+    background-size: cover; 
+    background-position: center, center;
+}
+
+@keyframes animatedBackground {
+    0% {
+      transform: translate3d(0, 0, 0);
+    }
+    100% {
+      transform: translate3d(-100%, 0, 0);
+    }
 }
 
 #transition{
@@ -56,13 +86,4 @@ canvas{
     position: absolute;
     background-size: cover;
     background-position: 0 0;
-}
-  
-@keyframes animatedBackground {
-    0% {
-      transform: translate3d(0, 0, 0);
-    }
-    100% {
-      transform: translate3d(-900px, 0, 0);
-    }
 }
